[metadata]
name = zdm
description = Python code for FRB z-DM calculations
long_description = file: README.md
long_description_content_type = text/markdown
author = Clancy James
author_email = clancy.w.james@gmail.com
license = BSD-3
url = https://github.com/FRBs/zdm
edit_on_github = False
github_project = FRBs/zdm
keywords = FRBs, zdm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    numpy>=1.18
    astropy>=4.0
    scipy>=1.4
    matplotlib>=3.3
    PyYAML>=5.1
    IPython>=7.2.0
    extension_helpers>=0.1

[options.extras_require]
test =
    pytest>=6.0.0
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
dev =
    pytest>=6.0.0
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme

[options.package_data]
* = *.rst, *.txt, data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*

[options.entry_points]
console_scripts =
#
    zdm_build_cube = zdm.scripts.build_cube:run
    zdm_pzdm = zdm.scripts.pzdm:run

[tool:pytest]
testpaths = "zdm/tests"

[coverage:run]
omit =
    pypeit/_astropy_init*
    pypeit/conftest.py
    pypeit/*setup_package*
    pypeit/tests/*
    pypeit/*/tests/*
    pypeit/extern/*
    pypeit/version*
    */pypeit/_astropy_init*
    */pypeit/conftest.py
    */pypeit/*setup_package*
    */pypeit/tests/*
    */pypeit/*/tests/*
    */pypeit/extern/*
    */pypeit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
